[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egos"
version = "0.1.0"
description = "EGOS — Execution Graph OS: traceable, replayable AI agent runtime"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agent", "ai", "execution-graph", "observability", "llm", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
egos = "egos.cli.main:main"

[tool.setuptools.packages.find]
include = ["egos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
